--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Urban Farmers</string>
     <string name="action_settings">Settings</string>
+    <string name="toast_no_network">Please check your internet connection</string>
+    <string name="loading">Loading...</string>
+    <string name="error_msg">There might be a problem , Please try again !</string>
 </resources>
