--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">Urban Farmers</string>
+    <string name="app_name">GardenIt</string>
     <string name="action_settings">Settings</string>
     <string name="toast_no_network">Please check your internet connection</string>
     <string name="loading">Loading...</string>
     <string name="error_msg">There might be a problem , Please try again !</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="full_name">Full Name*</string>
+    <string name="phone_number">Phone Number*</string>
+    <string name="email_address">Email Address</string>
+    <string name="enter_full_name">Please enter your Full Name.</string>
+    <string name="enter_phone_number">Please enter your Phone Number.</string>
+    <string name="create_garden">Create Garden</string>
 </resources>
