Added maps and Create Garden API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="enter_phone_number">Please enter your Phone Number.</string>
     <string name="create_garden">Create Garden</string>
     <string name="name_your_garden">Name your garden</string>
-
+    <string name="enter_garden_name">Please enter Garden Name</string>
 </resources>
