--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="phone_number">Mobile Number*</string>
     <string name="email_address">Email Address</string>
     <string name="enter_full_name">Please enter your Full Name.</string>
-    <string name="enter_phone_number">Please enter your Phone Number.</string>
+    <string name="enter_phone_number">Please enter your Mobile Number.</string>
+    <string name="invalid_mobile_number_length">Invalid Mobile Number. Please provide correct one.</string>
     <string name="create_garden">Create Garden</string>
     <string name="name_your_garden">Name your garden</string>
     <string name="enter_garden_name">Please enter Garden Name</string>
