--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="please_try_again">Something went wrong. Please try again.</string>
 
     <string name="title">Title</string>
+    <string name="logs">Activity/Logs</string>
 </resources>
