--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="password_does_not_match">Password doesn\'t match. Please check again</string>
     <string name="user_does_not_exists">User doesn\'t exists. Please check Mobile number and password</string>
     <string name="user_already_exists">User already exists. Please check Mobile number.</string>
+    <string name="share">Share</string>
 </resources>
