--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GardenIt</string>
+    <string name="app_name">Farmer City</string>
     <string name="action_settings">Settings</string>
     <string name="toast_no_network">Please check your internet connection</string>
     <string name="loading">Loading...</string>
@@ -51,7 +51,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="edit_my_garden">Edit My Garden</string>
+    <string name="shop_now">Shop Now</string>
     <string name="dashboard">Dashboard</string>
     <string name="my_issues">Advices</string>
     <string name="service_requests">Service Requests</string>
@@ -69,4 +69,5 @@
     <string name="user_does_not_exists">User doesn\'t exists. Please check Mobile number and password</string>
     <string name="user_already_exists">User already exists. Please check Mobile number.</string>
     <string name="share">Share</string>
+    <string name="yet_to_be_implemented">Yet to be implemented</string>
 </resources>
