--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,7 @@
     <string name="send_request">Send Request</string>
     <string name="create_issue">Get Advice</string>
     <string name="title_mowing_cutting">Title (eg: Mowing, Cutting etc)</string>
-    <string name="request_service_text">We provide endless range of gardening services.\n
-        Lawn mowing, Pruning, Weedeating, Edge trimming, Section tidy-ups, Fertilising and Spraying,
+    <string name="request_service_text">We provide endless range of gardening services.\nLawn mowing, Pruning, Weedeating, Edge trimming, Section tidy-ups, Fertilising and Spraying,
         Lawn care, Pots Tools.
     </string>
 
