--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="success_service_desc">Keep gardening</string>
     <string name="logout">Logout</string>
     <string name="logout_confirmation_message">Are you sure you want to logout?</string>
+    <string name="status">Status : </string>
 </resources>
