--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="status">Status : </string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="update_plant">Update Plant</string>
 </resources>
