--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,8 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="update_plant">Update Plant</string>
+    <string name="delete_confirmation_message">Are you sure you want to delete this plant?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cancel">Cancel</string>
 </resources>
