--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,6 @@
     <string name="address_line_1">Address Line 1*</string>
     <string name="address_line_2">Address Line 2</string>
     <string name="gcm_sender_id">676527630821</string>
+<string name="notification_type_request">request</string>
+    <string name="notification_type_issue">issue</string>
 </resources>
